--- a/myapp/templates/myapp/post_detail.html
+++ b/myapp/templates/myapp/post_detail.html
@@ -33,7 +33,7 @@
     {% if post.image %}
       <div class="container">
         <label>Image:</label><br>
-        <img src="{{post.image.url}}" alt="{{post.title}}" width="500" height="300">
+        <img src="{{post.image}}" alt="{{post.title}}" width="500" height="300">
       </div> <br>
     {% endif %}
 
