--- a/myapp/templates/myapp/post_list.html
+++ b/myapp/templates/myapp/post_list.html
@@ -18,7 +18,7 @@
     <div class="container">
         <h2>Search</h2>
         <form method="GET" action="{% url 'post_list' %}">
-            <input type="text" name="q" id="q" class="form-control" placeholder="Search Post" value="{{ request.GET.q }}"><br>
+            <input type="text" name="q" id="q" class="form-control" placeholder="Search Post" value="{{ query }}"><br>
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
     </div>
@@ -35,7 +35,7 @@
             {% for post in page_objs %}
                 <li class="list-group-item">
                     {% if post.image %}
-                    <img src="{{post.image.url}}" alt="{{post.title}}" width="500" height="300"><br>
+                    <img src="{{post.image}}" alt="{{post.title}}" width="500" height="300"><br>
                     {% endif %}
                     <a href="{% url 'post_detail' post.id %}">{{post.title}}</a> - {{post.created_at}}
                     <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete Post</a>
